--- a/index.css
+++ b/index.css
@@ -48,3 +48,11 @@ body {
     text-shadow: 10px 10px 19px  rgb(255, 145, 0) ;
     font-family: Times New Roman;
   }
+
+  h1{
+   text-align: center; 
+  font-family: 'Times New Roman', Times, serif;  }
+
+  .sobrenos{
+    font-family: 'Times New Roman', Times, serif;
+  }
